force-app/main/default/objects/Insurance_Claim__c/Insurance_Claim__c.object-meta.xml
<CustomObject>
    <label>Insurance Claim</label>
    <nameField>
        <displayFormat>IC-{000000000}</displayFormat>
        <label>Insurance Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Claim</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>