force-app/main/default/objects/Insurance_Claim__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>Insurance_Policy__r.Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>