force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Report_Type__c</fullName>
    <label>Claim Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notice of Incident</fullName>
            </value>
            <value>
                <fullName>Notice of Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>