force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>E&amp;O</fullName>
            </value>
            <value>
                <fullName>EPLI</fullName>
            </value>
            <value>
                <fullName>Professional Liability</fullName>
            </value>
            <value>
                <fullName>Kidnap/Ransom</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>