force-app/main/default/objects/Insurance_Claim__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Reporting Claim</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance Claim</relationshipLabel>
    <relationshipName>Insurance_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>