force-app/main/default/objects/Insurance_Claim__c/fields/Insurance_Claims_Case__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claims_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Claims Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Insurance Claim</relationshipLabel>
    <relationshipName>Insurance_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>