force-app/main/default/objects/Insurance_Claim__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Insurance_Policy__c.Policy_Status__c</field>
            <operation>equals</operation>
            <value>Bound, Expired</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Insurance Claim</relationshipLabel>
    <relationshipName>Insurance_Claim</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>