force-app/main/default/objects/Insurance_Claim__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <formula>Insurance_Policy__r.Insured_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured</label>
    <type>Text</type>
</CustomField>