force-app/main/default/objects/Insurance_Claim__c/fields/Loss_Location__c.field-meta.xml
<CustomField>
    <fullName>Loss_Location__c</fullName>
    <label>Loss Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>