force-app/main/default/objects/Insurance_Claim__c/fields/Role_in_Relation_to_Loss__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Relation_to_Loss__c</fullName>
    <label>Role in Relation to Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insured/Policy Holder</fullName>
            </value>
            <value>
                <fullName>Insured Agent/Broker</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Claimant Agent/Broker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>