force-app/main/default/objects/Insurance_Claim__c/fields/Total_Claim_Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Reserve_Amount__c</fullName>
    <label>Total Claim Reserve Amount</label>
    <summarizedField>Claim_Transaction__c.Reserve_Amount__c</summarizedField>
    <summaryForeignKey>Claim_Transaction__c.Insurance_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>