force-app/main/default/objects/Insurance_Claim__c/fields/Total_Settlement_or_Judgement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Settlement_or_Judgement_Amount__c</fullName>
    <label>Total Settlement or Judgement Amount</label>
    <summarizedField>Claim_Transaction__c.Settlement_or_Judgement_Amount__c</summarizedField>
    <summaryForeignKey>Claim_Transaction__c.Insurance_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>