force-app/main/default/objects/Insurance_Claim__c/listViews/START_Claims.listView-meta.xml
<ListView>
    <fullName>START_Claims</fullName>
    <columns>NAME</columns>
    <columns>Carrier__c</columns>
    <columns>Insured__c</columns>
    <columns>Claim_Type__c</columns>
    <columns>Insurance_Policy__c</columns>
    <columns>Loss_Date__c</columns>
    <columns>Loss_Location__c</columns>
    <columns>Loss_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>START Claims</label>
</ListView>